--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 document.getElementById('name').innerText = user.first_name;
                 
                 // ВАША ССЫЛКА НА ТУННЕЛЬ
-                const API = "https://3b3f32c36c6a4a54-79-127-206-186.serveousercontent.com";
+                const API = "https://submit-commodity-latinas-harrison.trycloudflare.com";
 
                 fetch(`${API}/api/balance/${user.id}`)
                     .then(r => r.json())
